# NumPDE

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Readme.md
common/cmake/: Common.cmake  CommonHeader.cmake  MyEigen.cmake  MyGTest.cmake  MyLibIGL.cmake  Settings.cmake  Submission.cmake
common/include/: writer.hpp
series0/: CMakeLists.txt
series0/linear_regression/: CMakeLists.txt  main.cpp
series0/midpoint/: CMakeLists.txt
series1/: CMakeLists.txt
series1/1d-FD/: CMakeLists.txt  finite_difference.cpp  plot_convergence.py  plot_fd.py
series1/2d-FD-porous/: CMakeLists.txt  finite_difference.cpp  plot_fd2d.py
series1/2d-FD-porous/cmake/: GetEigen.cmake
series1_warmup/: CMakeLists.txt
series1_warmup/2d-FD/: CMakeLists.txt  finite_difference.cpp  plot_fd2d.py
series2/: CMakeLists.txt
series2/1d-linFEM/: CMakeLists.txt  fem.cpp  plot_fem.py
series2/2d-linFEM/: CMakeLists.txt  H1_norm.hpp  L2_norm.hpp  Lshape.hpp  README.txt  constant_function.hpp  convergence.hpp  fem2d.cpp  fem_solve.hpp  grad_shape.hpp  load_vector.hpp  load_vector_assembly.hpp  plot_convergence.py  shape.hpp  stiffness_matrix.hpp  stiffness_matrix_assembly.hpp
series2_warmup/: CMakeLists.txt
series2_warmup/2d-poissonlFEM/: CMakeLists.txt  dirichlet_boundary.hpp  fem2d.cpp  fem_solve.hpp  grad_shape.hpp  load_vector.hpp  load_vector_assembly.hpp  shape.hpp  (+2 more)
series3/: CMakeLists.txt  series3.md
series3_warmup/: CMakeLists.txt
series4/: CMakeLists.txt  series4.pdf.xoj
series4/2d-rad-cooling/: CMakeLists.txt  boundary.hpp  grad_shape.hpp  heat.cpp  integrate.hpp  mass_matrix.hpp  mass_matrix_assembly.hpp  neumann_boundary.hpp  neumann_boundary_assemble.hpp  plot_on_mesh.m  plot_on_mesh.py  shape.hpp  stiffness_matrix.hpp  stiffness_matrix_assembly.hpp  time_evolution_explicit.hpp  time_evolution_implicit.hpp  writer.hpp
series4/2d-rad-cooling/cmake/: GetIGL.cmake
series4/linear-transp-1d/: CMakeLists.txt  README.txt  linear_transport.cpp
series5/: CMakeLists.txt  series5.pdf.xoj
series5/scalar-cons/: CMakeLists.txt  README.txt  plot.R  plot_convergence.py  plot_sol.py  scalarconservationlaw.cpp
(+43 files in other folders)
